--- a/haxball_site/templates/tournament/free_agent/free_agents_list.html
+++ b/haxball_site/templates/tournament/free_agent/free_agents_list.html
@@ -11,6 +11,14 @@
         }
     </style>
 {% endblock %}
+{% block scripts %}
+    <script>
+        function myFunction(Element) {
+            navigator.clipboard.writeText(Element.title);
+            alert("Скопировано " + Element.title);
+        }
+    </script>
+{% endblock %}
 {% block title %}Чемпионат/Свободные агенты           cis-haxball.com {% endblock %}
 {% block profile_of_user %}
     <div class="card mb-2 mt-2" style="border-radius: 10px">
@@ -47,11 +55,9 @@
                                                 title="{{ agent.player.user_profile.vk }}"></a>
                                     {% endif %}
                                     {% if agent.player.user_profile.discord %}
-                                        <div><img src="{% static "img/ico/discord_1.png" %}"
-                                                  onclick="navigator.clipboard.writeText({{ agent.player.user_profile.discord }});
-                                                          alert('Скопировано ' + {{ agent.player.user_profile.discord }});"
+                                        <div><img src='{% static "img/ico/discord_1.png" %}'
+                                                  onclick="myFunction(this)"
                                                   height="20" width="20"
-                                                  data-title="{{ agent.player.user_profile.discord }}"
                                                   title="{{ agent.player.user_profile.discord }}"
                                                   style="cursor: pointer;"></div>
                                     {% endif %}
