--- a/haxball_site/templates/core/include/sidebar_for_users.html
+++ b/haxball_site/templates/core/include/sidebar_for_users.html
@@ -5,7 +5,7 @@
 
 <div class="card" style="border-radius: 20px 20px 0px 0;">
     <div class="card-header d-inline-flex mb-0 justify-content-center bg-for-online-head" style="border-radius: 20px 20px 0px 0;">
-            <h6 class="mb-0">Сейчас онлайн: {{ users_online_count }}</h6>
+            <h6 class="mb-0" style="font-size: 1rem">Сейчас онлайн: {{ users_online_count }}</h6>
     </div>
     <div class="card-body p-0 bg-for-online-body" style="position: relative; height: 250px; overflow: auto;">
         <div class="btn-group-vertical w-100">
