--- a/haxball_site/templates/core/include/sidebar_for_last_activity.html
+++ b/haxball_site/templates/core/include/sidebar_for_last_activity.html
@@ -1,8 +1,10 @@
 {% load static %}
-
+{% block styles %}
+    <link rel="stylesheet" type="text/css" href="{% static "core/include/sidebar_for_last_activity.css" %}">
+{% endblock %}
 
 <div class="card mt-2" style="border-radius: 20px 20px 0px 0;">
-    <div class="card-header text-center p-2" style="border-radius: 20px 20px 0px 0;">
+    <div class="card-header text-center p-2 bg-for-online-head" style="border-radius: 20px 20px 0px 0;">
         <h4 class="mb-0"><img src="{% static "img/ico/new_1.png" %}" height="37" width="37" style="vertical-align: top"
                               ;>Комментарии</h4>
     </div>
