--- a/haxball_site/templates/polls/include/polls_list.html
+++ b/haxball_site/templates/polls/include/polls_list.html
@@ -15,9 +15,10 @@
             {% if user|user_in_poll:poll and user.is_authenticated %}
                 {% for choice in poll.choices.all %}
                     <div class="mb-2">
-                        {{ choice.choice_text }}
+                        {{ choice.choice_text }}<span class="ml-1">({{ choice.votes.count }})</span>
                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" style="width: {{ choice|percent_choices:poll }}%;"
+                            <div class="progress-bar" role="progressbar"
+                                 style="width: {{ choice|percent_choices:poll }}%;"
                                  aria-valuenow="{{ choice|percent_choices:poll }}"
                                  aria-valuemin="0" aria-valuemax="100">{{ choice|percent_choices:poll }}%
                             </div>
@@ -40,13 +41,16 @@
                     {% endfor %}
 
                     {% if user.is_authenticated %}
-                        <button type="submit" class="btn btn-primary mb-2">Submit</button>
+                        <div class="d-flex justify-content-center text-center mt-2">
+                            <button type="submit" class="btn btn-primary mb-2">Проголосовать</button>
+                        </div>
                     {% endif %}
                 </form>
                 {% if not user.is_authenticated %}
                     <div class="d-flex justify-content-center text-center mt-2">
-                        <h6 style="font-size: 1rem"><a href="#" data-toggle="modal" data-target="#loginModal">Войдите</a>, чтобы
-                        голосовать</h6>
+                        <h6 style="font-size: 1rem"><a href="#" data-toggle="modal"
+                                                       data-target="#loginModal">Войдите</a>, чтобы
+                            голосовать</h6>
                     </div>
                 {% endif %}
             {% endif %}
