--- a/haxball_site/templates/tournament/free_agent/free_agents_list.html
+++ b/haxball_site/templates/tournament/free_agent/free_agents_list.html
@@ -18,7 +18,7 @@
         }
     </script>
 {% endblock %}
-{% block title %}Чемпионат/Свободные агенты           cis-haxball.com {% endblock %}
+{% block title %}Чемпионат | Свободные агенты           cis-haxball.com {% endblock %}
 {% block profile_of_user %}
     <div class="card mb-2 mt-2" style="border-radius: 10px">
         <h2 class="text-center my-2"><i class="fa fa-search-plus text-success" aria-hidden="true"></i>
