--- a/haxball_site/templates/core/include/navbar.html
+++ b/haxball_site/templates/core/include/navbar.html
@@ -32,7 +32,7 @@
                     <a class="dropdown-item" href="#">Высшая лига</a>
                     <a class="dropdown-item" href="#">Первый дивизион</a>
                     <a class="dropdown-item" href="#">Кубок России</a>
-                    <a class="dropdown-item" href="#">Регламент</a>
+                    <a class="dropdown-item" href="https://www.cis-haxball.com/post/86/reglament">Регламент</a>
                     <a class="dropdown-item" href="#">Бронь хоста</a>
                     <a class="dropdown-item" href="#">Переносы</a>
                     <a class="dropdown-item" href="#">Трансферы</a>
